<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">86微仓</string>

    <string name="no_net">网络连接失败</string>

    <string name="home">首页</string>
    <string name="classify">分类</string>
    <string name="find">发现</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>
    <string name="progress_de">%1$s\%</string>


    <!--home-->
    <string name="text_one">微仓服务</string>
    <string name="text_two">老人专区</string>
    <string name="text_three">微仓黄页</string>
    <string name="text_four">口腔服务</string>

    <!--lottery-home-->
    <string name="text_lottery_one">即将揭晓</string>
    <string name="text_lottery_two">玩法规则</string>
    <string name="text_lottery_three">中奖信息</string>
    <string name="text_lottery_four">我的晒单</string>

    <!--common-->
    <string name="text_confirm">确定</string>
    <string name="text_tip">提示</string>
    <string name="text_tip_confirm">确定要删除吗?</string>
    <string name="empty_search">找不到您想要的结果</string>
    <string name="empty_order">目前没有%1$s订单</string>
    <string name="empty_review">暂时还没有评论</string>
    <string name="empty_no_review">暂时还没有要评论的商品</string>
    <string name="empty_logistics">暂时还没有物流信息</string>
    <string name="tip">该商品已下架或者库存不足</string>


    <!--login-->
    <string name="text_username">用户名</string>
    <string name="text_phone">手机号</string>
    <string name="text_password">密码</string>
    <string name="text_login">登录</string>
    <string name="text_code">验证码</string>
    <string name="text_forget_password">忘记密码？</string>
    <string name="text_send_message">发送验证码</string>
    <string name="text_timer">再次发送%1$sS</string>
    <string name="text_code_login">手机登录</string>
    <string name="text_password_login">用户名登录</string>
    <string name="text_user_name">用户名：</string>
    <string name="text_perfect_password">密码：</string>
    <string name="text_perfect_confirm">确认密码：</string>
    <string name="text_perfect_email">邮箱：</string>
    <string name="text_perfect_title">用户你好,欢迎登录86微仓</string>
    <string name="text_warning">注:为确保您在微仓界面操作顺利,请填写真实有效信息!</string>
    <string name="text_multiplication">*</string>

    <!--goods detail-->
    <string name="text_goods_detail">商品详情</string>
    <string name="text_add_cart">加入购物车</string>
    <string name="text_goods_buy">立即购买</string>
    <string name="text_goods_review">商品评价</string>
    <string name="text_goods_more_review">店铺推荐</string>
    <string name="text_goods_by">快递：</string>
    <string name="text_sell_count">月销量:</string>
    <string name="text_store_count">库存:</string>
    <string name="text_reset">重置</string>
    <string name="text_min_price">最低价</string>
    <string name="text_max_price">最高价</string>
    <string name="text_price_area">价格区间</string>

    <!--login-->
    <string name="text_manager">账户管理</string>
    <string name="text_coupon">优惠券</string>
    <string name="text_my_review">评论</string>
    <string name="text_bookmark">收藏</string>
    <string name="text_my_order">我的订单</string>

    <!--mine-->
    <string name="text_all_order">查看全部订单</string>
    <string name="text_order">全部订单</string>
    <string name="text_no_pay_order">待付款</string>
    <string name="text_take_goods_order">待收货</string>
    <string name="text_review">待评价</string>
    <string name="text_my_address">我的地址</string>
    <string name="text_my_service">我的服务</string>
    <string name="text_about_us">关于微仓</string>
    <string name="text_my_task">我的任务</string>
    <string name="text_share">我要分享</string>
    <string name="text_scan">扫一扫</string>
    <string name="text_change_password">修改密码</string>
    <string name="text_old_pass">旧密码：</string>
    <string name="text_new_password">新密码：</string>
    <string name="text_confirm_password">确认密码:</string>
    <string name="text_update">修改</string>
    <string name="text_account_manager">账户管理</string>
    <string name="text_real_name">真实姓名</string>
    <string name="text_qq">QQ</string>
    <string name="text_blog">微博</string>
    <string name="text_email">邮箱</string>
    <string name="text_safe">账户安全</string>
    <string name="text_change_pass">可修改密码</string>
    <string name="text_zhu_ce">用户注册协议</string>
    <string name="text_mian_ze">APP免责声明</string>
    <string name="text_logout">退出当前账户</string>
    <string name="text_apply_dealer">申请经销商</string>
    <string name="text_apply">申请</string>


    <!--购物车-->
    <string name="text_cart">我的购物车</string>
    <string name="text_all_select">全选</string>
    <string name="text_buy">结算(%1$s)</string>
    <string name="text_delete">删除(%1$s)</string>
    <string name="text_cancel">取消</string>
    <string name="text_edit">编辑</string>
    <string name="cart_total">合计:%1$s</string>
    <string name="cart_nothing">您的购物车还没有商品</string>

    <!--收货地址-->
    <string name="text_shipping_address">收货地址</string>
    <string name="text_add_shipping_address">添加地址</string>
    <string name="text_default_shipping_address">默认地址</string>
    <string name="text_edit_shipping_address">编辑</string>
    <string name="text_delete_shipping_address">删除</string>
    <string name="text_p_c_a">省、市、区</string>
    <string name="text_mobile">手机号码</string>
    <string name="text_shipping_name">收 货 人</string>
    <string name="text_detail_address">详细地址</string>
    <string name="text_save">保存</string>


    <!--搜索-->
    <string name="search">搜索</string>
    <string name="search_summary">筛选</string>
    <string name="search_sell_count">销量优先</string>
    <string name="search_price">价格</string>
    <string name="search_hint">输入商品名称查找</string>
    <string name="search_clear">清空历史搜索</string>
    <string name="search_history">搜索记录</string>
    <string name="search_hot">热搜</string>
    <string name="text_bat_price">批发价</string>
    <string name="text_price">零售价</string>
    <string name="text_goods_month_sell_count">月销量%1$s件</string>
    <string name="text_goods_sell_count">销量%1$s</string>
    <string name="text_goods_price">￥%1$s</string>


    <!--take order-->
    <string name="text_take_order">确认订单</string>
    <string name="text_take">提交订单</string>
    <string name="text_postal">运费</string>
    <string name="text_bao_pay">支付宝</string>
    <string name="text_wechat_pay">微信</string>
    <string name="text_umpay">银联</string>
    <string name="text_cash">货到付款</string>
    <string name="text_total">合计:</string>
    <string name="text_shipping">收货人:%1$s</string>
    <string name="text_take_shipping_address">收货地址:%1$s</string>
    <string name="text_comment">点击这里留言!</string>
    <string name="text_finish_update">完成</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

    <!--order detail-->
    <string name="text_order_detail">订单详情</string>
    <string name="text_order_logistics">感谢您的购买，点击查看物流信息！</string>
    <string name="text_order_no">订单号：%1$s </string>
    <string name="text_tracking_no">运单号：%1$s </string>
    <string name="text_take_order_time">下单时间：%1$s </string>
    <string name="text_pay_order_time">付款时间：%1$s </string>
    <string name="text_receiver_order_time">接单时间：%1$s </string>
    <string name="text_shipping_time">发货时间：%1$s </string>
    <string name="text_finish_time">确认时间：%1$s </string>


    <!--订单列表-->
    <string name="text_canceled">已取消</string>
    <string name="text_cancel_order">取消订单</string>
    <string name="text_delete_order">删除订单</string>
    <string name="text_logistics">物流信息</string>
    <string name="text_finished">已完成</string>
    <string name="text_pay">付款</string>
    <string name="text_finish">确认收货</string>


    <string name="text_count">共%1$s件,</string>


    <!--feedback-->
    <string name="text_feedback">意见反馈</string>
    <string name="text_feedback_tip">请输入您对我们的宝贵意见！</string>

    <!--publishTaskOrder-->
    <string name="text_publish_task">发布任务</string>
    <string name="text_publish">发布</string>
    <string name="text_task_price">费用：</string>
    <string name="text_task_title">任务标题：</string>
    <string name="text_task_content">任务内容：</string>
    <string name="text_task_tip">请描述任务内容&#8230;</string>
    <string name="text_publisher">任务发布者:</string>
    <string name="text_receiver">任务接受者:</string>
    <string name="text_reviewing">审核中</string>
    <string name="text_receive">接受</string>
    <string name="text_overdue">已过期</string>
    <string name="text_task_finish">完成</string>
    <string name="text_task_finished">已完成</string>
    <string name="text_task_notpass">审核未通过</string>
    <string name="text_publish_task_order">发布的任务</string>
    <string name="text_receive_task_order">接收的任务</string>


    <string name="text_washing" formatted="false">
        <![CDATA[
        <div style="width:100%; font-family:FangSong;margin-top:10px">
            &nbsp;&nbsp;&nbsp;&nbsp;倾心洗衣工坊是大连金领阳光商务服务有限公司为商务人士、白领精英精心打造的便捷洗衣品牌。致力于为您省时、省心、省力，专业洗护您的每一件衣物。
            <p>&nbsp;&nbsp;&nbsp;&nbsp;我们迎合现在市场需求，优化传统洗衣理念，注重洗衣环境，采用线上、线下一体的经营模式，提供上门取送服务，为客户不同的需求定制不同的洗衣计划。洁净清新的每一天让您的工作、生活更加顺心如意。</p>
            业务范围:<br/>
            &nbsp;&nbsp;&nbsp;&nbsp;各类服饰、皮衣、皮具、鞋、包、奢侈品护理 、汽车皮毛坐垫、亚麻垫，地毯、窗帘、床上用品、各种工装、工服等清洁洗护，承接各类单位、团体业务。
        </div>
        ]]>
    </string>

     <string name="text_perfect" formatted="false">
        <![CDATA[
            请完善以下信息(<font color="red">*</font>为必填项)
        ]]>
    </string>
    <!--setting-->
    <string name="text_vipcard">我的会员卡</string>
    <string name="text_eggvip">我的服务</string>

    <!--setting-->
    <string name="text_setting">更多设置</string>
    <string name="text_setting_push">消息推送设置</string>
    <string name="text_setting_clear">清除本地缓存</string>
    <string name="text_cache">%1$s</string>

    <!--publish review-->
    <string name="text_publish_hint">发表评论&#8230;</string>
    <string name="text_good_review">好评</string>
    <string name="text_normal_review">中评</string>
    <string name="text_bad_review">差评</string>
    <string name="text_add_comment">添加评论</string>
    <string name="text_goods_reviews">商品评论</string>
    <string name="text_all_review">查看全部评论</string>
    <string name="text_review_describe">描述相符:</string>
    <string name="text_publish_review">发表评论</string>

    <string name="text_classify_search" tools:ignore="TypographyEllipsis">输入商品分类或名称...</string>

    <string name="text_lucky" formatted="false">
        <![CDATA[
            (<font color="red">恭喜</font>)
        ]]>
    </string>
</resources>
