<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PublishTaskOrderActivity">

    <com.zczczy.leo.microwarehouse.viewgroup.MyTitleBar
        android:id="@+id/my_title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bar_bg"
        android:minHeight="50dp"
        app:mNavButtonIcon="@drawable/title_back"
        app:mRightText="@string/text_publish"
        app:mRightTextMarginRight="15dp"
        app:mStatueBarIsTransparent="true"
        app:mTitle="@string/text_publish_task" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_task_title" />

            <EditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/order_gray"
                android:gravity="top"
                android:maxLength="20"
                android:minLines="1"
                android:padding="10dp"
                android:textColorHint="#cccccc"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_task_content" />

            <EditText
                android:id="@+id/edt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/order_gray"
                android:gravity="top"
                android:hint="@string/text_task_tip"
                android:lines="5"
                android:maxLength="500"
                android:padding="10dp"
                android:textColorHint="#cccccc"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_task_price" />

            <EditText
                android:id="@+id/edt_task_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/order_gray"
                android:gravity="top"
                android:inputType="numberDecimal"
                android:maxLength="18"
                android:minLines="1"
                android:padding="10dp"
                android:textColorHint="#cccccc"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>