<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_tab_color"
    android:orientation="vertical"
    tools:context=".activities.PublishReviewActivity">

    <com.zczczy.leo.microwarehouse.viewgroup.MyTitleBar
        android:id="@+id/my_title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bar_bg"
        android:minHeight="50dp"
        app:mNavButtonIcon="@drawable/title_back"
        app:mTitle="@string/text_add_comment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginEnd="5dp"
            android:background="@color/line_color">

            <ImageView
                android:id="@+id/img_store_pic"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/goods_default" />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_review_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/text_publish_hint"
            android:lines="5"
            android:maxLength="100"
            android:padding="10dp"
            android:textColorHint="#cccccc"
            android:textSize="14sp" />

    </LinearLayout>

    <include layout="@layout/horizontal_line" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/rb_good_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/good_review"
            android:padding="10dp"
            android:text="@string/text_good_review" />

        <RadioButton
            android:id="@+id/rb_soso_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/good_review"
            android:padding="10dp"
            android:text="@string/text_normal_review" />

        <RadioButton
            android:id="@+id/rb_bad_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/bad_review"
            android:padding="10dp"
            android:text="@string/text_bad_review" />

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/text_review_describe"
            android:textSize="16sp" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/ratingbar_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_button"
        android:text="@string/text_publish_review"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>