<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.FeedbackActivity">

    <com.zczczy.leo.microwarehouse.viewgroup.MyTitleBar
        android:id="@+id/my_title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bar_bg"
        android:minHeight="50dp"
        app:mNavButtonIcon="@drawable/title_back"
        app:mTitle="@string/text_feedback" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/edt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/order_gray"
            android:gravity="top"
            android:hint="@string/text_feedback_tip"
            android:lines="8"
            android:maxLength="200"
            android:padding="10dp"
            android:textColorHint="#cccccc"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/common_button"
            android:padding="15dp"
            android:text="@string/text_finish_update"
            android:textColor="@color/white"
            android:textSize="17dp" />
    </LinearLayout>

</LinearLayout>