<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_bg_color"
                android:orientation="vertical"
                tools:context=".fragments.CartFragment">

    <com.leo.lu.mytitlebar.MyTitleBar
        android:id="@+id/my_title_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/title_bar_bg"
        app:mNavButtonIcon="@drawable/title_back"
        app:mRightText="@string/text_edit"
        app:mRightTextColor="@color/white"
        app:mRightTextMarginRight="10dp"
        app:mStatueBarIsTransparent="true"
        app:mTitle="@string/text_cart"
        app:mTitleTextColor="@color/white"/>

    <LinearLayout
        android:id="@+id/ll_nothing"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/my_title_bar"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cart_nothing"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_nothing"/>

        <ImageView
            android:id="@+id/img_soon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/soon_search"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/line"
        android:layout_below="@+id/ll_nothing"
        android:background="@color/white"/>

    <include
        android:id="@+id/line"
        layout="@layout/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_above="@+id/ll_cart_total"/>

    <LinearLayout
        android:id="@+id/ll_cart_total"
        android:layout_width="match_parent"
        android:layout_height="49.5dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_all"
                style="@style/CustomCheckboxTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/text_all_select"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_total_lb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:padding="2dp"
                android:textSize="15sp"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_checkout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.8"
            android:background="@color/cart_buy"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_checkout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/text_buy"
                android:textColor="@color/white"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.8"
            android:background="@color/red"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt_delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/text_delete"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>