<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    tools:context=".activities.TakeOrderActivity">

    <com.zczczy.leo.microwarehouse.viewgroup.MyTitleBar
        android:id="@+id/my_title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/title_bar_bg"
        android:minHeight="50dp"
        app:mNavButtonIcon="@drawable/title_back"
        app:mTitle="@string/text_take_order"
        app:mTitleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_take"
        android:layout_below="@+id/my_title_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/address_line" />

            <include layout="@layout/order_shipping_address" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/address_line" />

            <include layout="@layout/horizontal_line" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/rb_umpay"
                    style="@style/PayCheckboxTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/text_umpay" />

                <include layout="@layout/horizontal_line" />

                <RadioButton
                    android:id="@+id/rb_cash"
                    style="@style/PayCheckboxTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cash" />

                <RadioButton
                    android:id="@+id/rb_wechat_pay"
                    style="@style/PayCheckboxTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_wechat_pay"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/rb_bao_pay"
                    style="@style/PayCheckboxTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_bao_pay"
                    android:visibility="gone" />

            </RadioGroup>

            <include layout="@layout/horizontal_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_postal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:padding="15dp"
                        android:text="@string/text_postal" />

                    <TextView
                        android:id="@+id/txt_sub_express_charges"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:padding="15dp" />
                </RelativeLayout>

                <include layout="@layout/horizontal_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/common_shadow_selector"
                    android:gravity="center_vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:padding="15dp"
                        android:src="@drawable/order_comment" />

                    <TextView
                        android:id="@+id/txt_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/img_next"
                        android:layout_toRightOf="@+id/img_comment"
                        android:text="多发时段发生发生多发时段发生发生多发时段发生发生多发时段发生发生多发时段发生发生" />

                    <ImageView
                        android:id="@+id/img_next"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="15dp"
                        android:src="@drawable/next" />
                </RelativeLayout>


            </LinearLayout>

            <include layout="@layout/horizontal_line" />

            <include
                layout="@layout/horizontal_line"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="15dp" />

            <include layout="@layout/common_order_item" />

            <include layout="@layout/horizontal_line" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_take"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="2"
            android:gravity="left|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_total" />

            <TextView
                android:id="@+id/txt_total"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/main_font_color" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_take"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@color/main_font_color"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/text_take"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>